tests/paczka1/fuzzy1/41671319.err
Error in line 5: Xf0OW8dhNO A625 71,7
Error in line 7: Xf0OW8dhNO A279 66,9
Error in line 8: D4NHR52 A645 2,6
